--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Primary Meta Tags -->
   <title>Ahmed Al-regas – Front-End Web Developer</title>
   <meta name="title" content="Ahmed Al-regas – Front-End Web Developer" />
-  <meta name="description" content="Ahmed Aziz Al-regas, pengembang web front-end yang berfokus pada desain antarmuka modern, responsif, dan performa tinggi." />
+  <meta name="description" content="Ahmed Aziz Al-regas, front-end web developer focused on modern, responsive, and high-performance interface design." />
   <meta name="keywords" content="Ahmed Al-regas , Front-End Developer, Web Developer Yemen, Portofolio Ahmed Al-regas" />
   <meta name="google-site-verification" content="ZYNfZwMUiNwSMF3EMvY85bid2BVvB12uMMRfUNWw75A" />
   <meta name="mobile-web-app-capable" content="yes" />
@@ -21,14 +21,14 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://ahmed-port.vercel.app/" />
   <meta property="og:title" content="Ahmed Al-regas – Front-End Web Developer" />
-  <meta property="og:description" content="Portofolio Ahmed Al-regas – pengembang web dengan fokus pada desain modern dan performa tinggi." />
+  <meta property="og:description" content="Portofolio Ahmed Al-regas – web developer with a focus on modern design and high performance." />
   <meta property="og:image" content="https://ahmed-port.vercel.app/Meta.png" />
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:url" content="https://ahmed-port.vercel.app/" />
   <meta name="twitter:title" content="Ahmed Al-regas – Front-End Web Developer" />
-  <meta name="twitter:description" content="Portofolio Ahmed Al-regas – pengembang web dengan fokus pada desain modern dan performa tinggi." />
+  <meta name="twitter:description" content="Portofolio Ahmed Al-regas – web developer with a focus on modern design and high performance." />
   <meta name="twitter:image" content="https://ahmed-port.vercel.app/Meta.png" />
 
   <!-- Structured Data JSON-LD -->
